syntax = "proto3";

import "registry.proto";

package ProjectOrigin.Registry.v1.Internal;

message TransactionStatus {
    // The state of the transaction.
    ProjectOrigin.Registry.v1.TransactionState state = 1;

    // The error message if the transaction is invalid.
    string message = 2;
}
